--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,17 @@
     <string name="text_neuer_verbraucher">Neuen Verbraucher hinzufügen</string>
     <string name="home_meineVerbaucher">Meine Verbraucher:</string>
     <string name="text_consumer_name">Name des Verbraucher</string>
-    <string name="text_consumer_consumption">Verbrauch des Geräts</string>
+    <string name="text_consumer_consumption">Verbrauch</string>
     <string name="text_consumer_time">Nutzungsdauer pro Tag</string>
     <string name="text_consumer_interval">Zeitraum der Nutzung</string>
     <string name="text_consumer_price">Energiepreis</string>
     <string name="text_consumer_totalconsumption">Gesamtverbrauch</string>
     <string name="text_consumer_cost">Gesamtkosten</string>
     <string name="button_consumer_create">Verbraucher erstellen</string>
+    <string name="button_consumer_strom">Strom</string>
+    <string name="button_consumer_gas">Gas</string>
+    <string name="button_consumer_minute">min.</string>
+    <string name="button_consumer_stunde">hour</string>
     <string name="editText_consumer_hintname">Verbaucher</string>
     <string name="editText_kwh_hintname">kwh</string>
 
